--- a/backend/package.json
+++ b/backend/package.json
@@ -1,24 +1,15 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "type": "module",
+  "name": "zuros-store-backend",
+
+  "scripts": {
+    "dev": "wrangler dev",
+    "deploy": "wrangler deploy --minify"
+  },
   "dependencies": {
-    "axios": "^1.5.1",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "hono": "^4.7.5"
   },
   "devDependencies": {
-    "eslint": "^8.51.0",
-    "nodemon": "^3.0.1"
-  },
-  "scripts": {
-    "lint": "eslint .",
-    "dev": "nodemon --experimental-specifier-resolution=node src/index.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+    "@cloudflare/workers-types": "^4.20250214.0",
+    "wrangler": "^3.109.2"
+  }
 }
