--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,10 @@
     "deploy": "wrangler deploy --minify"
   },
   "dependencies": {
+    "@hono/zod-validator": "^0.4.3",
+    "bcryptjs": "^3.0.2",
     "hono": "^4.7.5",
-    "bcryptjs": "^3.0.2"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250214.0",
