chore(backend): enable logs in Wrangler
- Added log configuration to `wrangler.toml` Logs enabled by default

--- a/backend/wrangler.toml
+++ b/backend/wrangler.toml
@@ -3,3 +3,5 @@ name = "zuros-store-backend"
 main = "src/index.ts"
 compatibility_date = "2025-03-20"
 keep_vars = true
+[observability.logs]
+enabled = true
